<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/bgr_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/lyt_start_regist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="20dp">


        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/clothes"
            android:transitionName="logo_img" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bungee"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/wild_florist"
            android:textColor="#FFFFFF"
            android:textSize="35sp"
            android:textStyle="bold"
            android:transitionName="logo_txt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/lyt_start_regist"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_imges"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/bungee"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textColor="#78D2FF"
            android:textSize="25sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/bgr_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_user_regist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:autofillHints="username"
                android:background="@drawable/style"
                android:drawableStart="@drawable/ic_person_outline"
                android:drawablePadding="10dp"
                android:hint="@string/user"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtPass_regist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/bgr_color"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_pass_regist"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="password"
                android:background="@drawable/style"
                android:drawableStart="@drawable/ic_security"
                android:drawablePadding="10dp"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/bgr_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_email_regist"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="password"
                android:background="@drawable/style"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/txtRmAcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_note"
            android:padding="20dp"
            android:text="You are not a robot"
            android:textColor="@color/text"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtLink_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-thin"
            android:gravity="center"
            android:text="@string/already_gave_account"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>


</RelativeLayout>