<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgr_color"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/lyt_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="30dp">


        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/clothes"
            android:transitionName="logo_img" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bungee"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="SC-Style"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"
            android:transitionName="logo_txt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/lyt_start"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_imges"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/welcome"
            android:textColor="#3AA9E1"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#78D2FF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtUser"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/style"
                android:drawableStart="@drawable/ic_person_outline"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="#78D2FF"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPass"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="password"
                android:background="@drawable/style"
                android:drawableStart="@drawable/ic_security"
                android:drawablePadding="10dp"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/txtForgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="15dp"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/text"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button"
            android:padding="10dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtLink_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="casual"
            android:text="@string/create_new_account"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp">

            <View
                android:layout_width="140dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/or"
                android:textSize="20sp" />

            <View
                android:layout_width="140dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:background="@color/black" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                app:cardCornerRadius="50dp">

                <ImageView
                    android:id="@+id/img_gg"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/google" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                app:cardCornerRadius="50dp">

                <ImageView
                    android:id="@+id/img_fb"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/facebook" />
            </androidx.cardview.widget.CardView>

        </TableRow>

    </LinearLayout>

</RelativeLayout>