<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/bgr_pager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:id="@+id/lyTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtSearch"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/shape_search"
            android:queryBackground="@android:color/transparent"
            android:hint="@string/search_here"
            android:drawableStart="@drawable/search"
            android:drawablePadding="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:layout_gravity="center_vertical"
            android:inputType="text"
            android:autofillHints="name"/>

        <ImageView
            android:id="@+id/imgChat"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_baseline_notifications_none_24"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="691dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lyTop">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">


                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/categories"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:itemCount="1"
                            tools:listitem="@layout/z_categories_item_view">


                        </androidx.recyclerview.widget.RecyclerView>

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:gravity="center_vertical"
                            android:padding="5dp"
                            android:text="@string/discover"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.044"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/categories" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/listProduct"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView"
                            android:orientation="vertical"
                            tools:itemCount="1"
                            tools:listitem="@layout/z_list_item_home_view"
                            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>